--- a/Topic.dita
+++ b/Topic.dita
@@ -3,6 +3,6 @@
 <topic id="topic_m2g_r4p_r2b">
     <title></title>
     <body>
-        <p></p>
+        <p>sdfsdfsdfsdfsdfsdfsdfsdfs</p>
     </body>
 </topic>
