--- a/Concept.dita
+++ b/Concept.dita
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <!DOCTYPE concept PUBLIC "-//OASIS//DTD DITA Concept//EN" "concept.dtd">
-<concept id="concept_i3j_vh1_jfb">
+<concept id="concept_jnx_ss1_mfb">
     <title></title>
     <shortdesc></shortdesc>
     <conbody>
