Fichier créé avec oXygen XML Web Author.

--- a/Concept.dita
+++ b/Concept.dita
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <!DOCTYPE concept PUBLIC "-//OASIS//DTD DITA Concept//EN" "concept.dtd">
-<concept id="concept_imn_mx1_mfb">
+<concept id="concept_o1r_qx1_mfb">
     <title></title>
     <shortdesc></shortdesc>
     <conbody>
