--- a/Concept.dita
+++ b/Concept.dita
@@ -4,6 +4,11 @@
     <title></title>
     <shortdesc></shortdesc>
     <conbody>
-        <p></p>
+        <p>Spring Time, the time of growth and renewal of new plant and animal life. Spring comes at
+            different times in the North and South Hemispheres. Spring time in the Northern
+            hemisphere is between March - May, and between September &nbsp;- November in the
+            Southern hemisphere. Most flowering plants bloom during spring time. Therefore, flowers
+            that bloom only during spring, Spring Flowers, bloom at different times in the two
+            hemispheres. </p>
     </conbody>
 </concept>
