--- a/Concept.dita
+++ b/Concept.dita
@@ -7,8 +7,8 @@
         <p>Spring Time, the time of growth and renewal of new plant and animal life. Spring comes at
             different times in the North and South Hemispheres. Spring time in the Northern
             hemisphere is between March - May, and between September - La légitimité​ ​ économique
-            des défenses November in the Southern hemisphere. Most flowering plants bloom during
-            spring tim e. Therefore, flowers that bloom only during spring, Spring Flowers, bloom at
-            different times in the two hemispheres. </p>
+            des défenses November in the Southern hemisphere. Most flowering plants bloom
+            durin555555555555g spring tim e. Therefore, flowers that bloom only during spring,
+            Spring Flowers, bloom at different times in the two hemispheres. </p>
     </conbody>
 </concept>
