Committing with oXygen XML Web Author

--- a/Concept.dita
+++ b/Concept.dita
@@ -5,9 +5,9 @@
     <shortdesc></shortdesc>
     <conbody>
         <p>Spring Time, the time of growth and renewal of new plant and animal life. Spring comes at
-            different times in the North and South Hemispheres. Spring time in the Northern
-            hemisphere is between March - May, and between September - La légitimité​ ​ économique
-            des défenses November in the Southern hemisphere. Most flowering plants bloom
+            different times in the North and South Hemisphewdwwedwedwdwewderes. Spring time in the
+            Northern hemisphere is between March - May, and between September - La légitimité​ ​
+            économique des défenses November in the Southern hemisphere. Most flowering plants bloom
             durin555555555555g spring tim e. Therefore, flowers that bloom only during spring,
             Spring Flowers, bloom at different times in the two hemispheres. </p>
     </conbody>
