Fichier créé avec oXygen XML Web Author.

--- a/Task.dita
+++ b/Task.dita
@@ -1,8 +1,7 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <!DOCTYPE task PUBLIC "-//OASIS//DTD DITA Task//EN" "task.dtd">
-<task id="task_rlc_13p_t2b">
-    <title><?oxy_insert_start author="Anonymous" timestamp="20180810T133952+0300"?>Some
-        task<?oxy_insert_end?></title>
+<task id="task_hjy_xrh_4fb">
+    <title></title>
     <shortdesc></shortdesc>
     <taskbody>
         <context>
