Fichier créé avec oXygen XML Web Author.

--- a/Concept.dita
+++ b/Concept.dita
@@ -1,14 +1,9 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <!DOCTYPE concept PUBLIC "-//OASIS//DTD DITA Concept//EN" "concept.dtd">
-<concept id="concept_o1r_qx1_mfb">
+<concept id="concept_yhb_mth_4fb">
     <title></title>
     <shortdesc></shortdesc>
     <conbody>
-        <p>Spring Time, the time of growth and renewal of new plant and animal life. Spring comes at
-            different times in the North and South Hemisphewdwwedwedwdwewderes. Spring time in the
-            Northern hemisphere is between March - May, and between September - La légitimité​ ​
-            économique des défenses November in the Southern hemisphere. Most flowering plants bloom
-            durin555555555555g spring tim e. Therefore, flowers that bloom only during spring,
-            Spring Flowers, bloom at different times in the two hemispheres. </p>
+        <p></p>
     </conbody>
 </concept>
