Fichier créé avec oXygen XML Web Author.

--- a/Topic.dita
+++ b/Topic.dita
@@ -1,8 +1,8 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <!DOCTYPE topic PUBLIC "-//OASIS//DTD DITA Topic//EN" "topic.dtd">
-<topic id="topic_m2g_r4p_r2b">
-    <title>TestAAAAAAAAAAAAA</title>
+<topic id="topic_pz1_qth_4fb">
+    <title></title>
     <body>
-        <p>sdfWWWWWWWWWWWWWWWWWWWWsAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAdfsddfgdfgdfgdfgfsdfsdfsdfsdfsdfs</p>
+        <p></p>
     </body>
 </topic>
