--- a/test/someTopic.dita
+++ b/test/someTopic.dita
@@ -1,7 +1,7 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <!DOCTYPE topic PUBLIC "-//OASIS//DTD DITA Topic//EN" "topic.dtd">
 <topic id="topic_mj1_kqg_t2b">
-    <title>Title<?oxy_insert_start author="mihaela-ada" timestamp="20180906T150733+0300"?>AAAAAAAAAAA<?oxy_insert_end?></title>
+    <title>Title<?oxy_insert_start author="mihaela-ada" timestamp="20180906T150733+0300"?>AAAAAA<?oxy_insert_end?>3333333<?oxy_insert_start author="mihaela-ada" timestamp="20180906T150733+0300"?>AAAAA<?oxy_insert_end?></title>
     <body>
         <p>Para</p>
     </body>
