--- a/untitled.dita
+++ b/untitled.dita
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <!DOCTYPE task PUBLIC "-//OASIS//DTD DITA Task//EN" "task.dtd">
-<task id="task_e1r_dd2_pfb">
+<task id="task_t3s_gd2_pfb">
     <title></title>
     <shortdesc></shortdesc>
     <taskbody>
