Committing with oXygen XML Web Author

--- a/Concept.dita
+++ b/Concept.dita
@@ -1,7 +1,7 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <!DOCTYPE concept PUBLIC "-//OASIS//DTD DITA Concept//EN" "concept.dtd">
 <concept id="concept_yhb_mth_4fb">
-    <title></title>
+    <title>r34r</title>
     <shortdesc></shortdesc>
     <conbody>
         <p></p>
