--- a/Topic.dita
+++ b/Topic.dita
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <!DOCTYPE topic PUBLIC "-//OASIS//DTD DITA Topic//EN" "topic.dtd">
-<topic id="topic_pfx_xg4_qfb">
+<topic id="topic_snd_2h4_qfb">
     <title></title>
     <body>
         <p></p>
