Created file with oXygen XML Web Author.

--- a/Task.dita
+++ b/Task.dita
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <!DOCTYPE task PUBLIC "-//OASIS//DTD DITA Task//EN" "task.dtd">
-<task id="task_hjy_xrh_4fb">
+<task id="task_lgt_f34_qfb">
     <title></title>
     <shortdesc></shortdesc>
     <taskbody>
