--- a/Map.ditamap
+++ b/Map.ditamap
@@ -7,9 +7,7 @@
     <?oxy_comment_start author="mihaela-ada" timestamp="20181004T141247+0000" comment="4" parentID="tf2_531_jfb" mid="1"?>
     <?oxy_comment_start author="mihaela-ada" timestamp="20181004T141244+0000" comment="3" parentID="ir5_t31_jfb" mid="2"?>
     <topicref href="Concept%20(Relax%20NG).dita">
-        <topicref href="test/someTopic.dita">
-            <topicref href="Task.dita"/>
-        </topicref>
+        <topicref href="test/someTopic.dita"/>
     </topicref><?oxy_comment_end?><?oxy_comment_end mid="3"?><?oxy_comment_end mid="1"?><?oxy_comment_end mid="2"?>
     <?oxy_comment_start author="mihaela-ada" timestamp="20181004T141347+0000" comment="5"?>
     <topicref href="Concept%20(Relax%20NG).dita"/><?oxy_comment_end?>
