--- a/Composite (Relax NG).dita
+++ b/Composite (Relax NG).dita
@@ -2,7 +2,7 @@
 <?xml-model href="urn:oasis:names:tc:dita:rng:ditabase.rng" schematypens="http://relaxng.org/ns/structure/1.0"?>
 <?xml-model href="urn:oasis:names:tc:dita:rng:ditabase.rng" schematypens="http://purl.oclc.org/dsdl/schematron"?>
 <dita>
-    <topic id="topic_uwk_x34_qfb">
+    <topic id="topic_fhq_qj4_qfb">
         <title></title>
         <body>
             <p></p>
